grammar.js
    source_file: ($) => repeat($._statement),

    // ----------------------------------------------------------------------------
    // Statements / top-level-ish forms
    // ----------------------------------------------------------------------------
    //
    // NOTE: Order matters. Try the most “keyworded/specific” forms first.
    _statement: ($) =>
      choice(
        $.import_statement,
        $.fixity_declaration,
        $.type_alias_declaration,
        $.declaration,
        $.value_definition,
      ),

    // import a.b
    import_statement: ($) =>
      seq(field("keyword", $.kw_import), field("module", $.term_identifier)),

    // infixl a OP b = expr
    // infixr a OP b = expr
    // infixl _ OP _ = expr   (underscore binders allowed)
    // prefix OP x = expr
    // prefix OP _ = expr
    declaration: ($) =>
      prec.right(
        PREC.assignment,
        seq(
          field("name", $.term_identifier),
          field("colon", $.colon),
          field("type", $.type),
          optional(
            seq(
              field("name2", $.term_identifier),
              field("equals", $.equals),
              field("value", $.expr),
            ),
          ),
        ),
      ),

    // x = expr
    //
    // This must reduce cleanly at EOF, otherwise Zed will show (ERROR ...) for the
    // whole definition block and cascade into spurious errors.
    //
    // Keep this rule *structurally simple* so the parser can reduce it immediately
    // once `value` is complete.
    value_definition: ($) =>
      prec.right(
        PREC.assignment,
        seq(
          field("name", $.term_identifier),
          field("equals", $.equals),
          field("value", $.expr),
        ),
      ),

    // ----------------------------------------------------------------------------
    // Types
    // ----------------------------------------------------------------------------
    // Upstream allows base types (`Integer`, `Boolean`, `Character`, `Unit`) and named
    // types as full types, so `x : Integer` is valid.
    //
    // Our previous grammar only accepted `type_expr` (which requires `->` or `forall`)
    // at the top level, so `x : Integer` could not parse as a declaration.
    type: ($) => choice($.type_expr, $.type_primary),
    type_expr: ($) => choice($.forall_type, $.type_arrow),

    // forall T, TypeExpr
    type_primary: ($) =>
      choice(
        $.type_identifier, // includes '_' hole
        $.type_parens,
        $.type_prod,
        $.type_list_brackets,
        $.type_app,
      ),

    type_parens: ($) =>
      seq(
        field("lparen", $.lparen),
        field("type", $.type_expr),
        field("rparen", $.rparen),
      ),

    type_prod: ($) =>
      seq(
        field("lparen", $.lparen),
        field("left", $.type_expr),
        field("comma", $.comma),
        field("right", $.type_expr),
        field("rparen", $.rparen),
      ),

    type_list_brackets: ($) =>
      seq(
        field("lbrack", $.lbrack),
        field("type", $.type_expr),
        field("rbrack", $.rbrack),
      ),

    type_app: ($) =>
      prec.right(
        PREC.application,
        seq(field("ctor", $.type_identifier), field("arg", $.type_primary)),
      ),

    // ----------------------------------------------------------------------------
    // Terms / expressions
    // ----------------------------------------------------------------------------
    //
    // Refactor goal:
    // - Remove ambiguity around `let ... = <value> in ...` where `<value>` can be a
    //   single atomic term like `2`.
    // - Prevent the parser from getting stuck in an "application continuing" state
    //   where it cannot accept `kw_in`.
    //
    // Strategy:
    // - Define an internal "atom" expression that cannot contain `let`, `if`, etc.
    // - Build application and infix layers on top of atoms.
    // - Keep `let` / `if` / `case` / `lcase` / `fun` at the highest level.
    expr: ($) =>
      choice(
        $.if_expression,
        $.let_expression,
        $.fun_expression,
        $.tfun_expression,
        $.case_expression,
        $.lcase_expression,
        $.infix_expression,
      ),

    // if e then e else e
    fun_expression: ($) =>
      seq(
        field("fun", $.kw_fun),
        field("param", $.term_identifier_or_hole),
        field("colon", $.colon),
        field("type", $.type_expr),
        field("comma", $.comma),
        field("body", $.expr),
      ),

    // fun T, e   (type abstraction)
    _atom: ($) =>
      choice(
        $.integer,
        $.boolean,
        $.unit,
        $.term_identifier,
        $.term_parens,
        $.pair,
        $.list_literal,
        $.injection,
        $.nil_term,
        $.io_primitive,
        $.char_literal,
        $.string_literal,
      ),

    infix_expression: ($) =>
      prec.left(
        PREC.infix,
        seq(
          field("left", $.application_or_primary),
          repeat(
            seq(
              field("operator", $.operator),
              field("right", $.application_or_primary),
            ),
          ),
        ),
      ),

    application_or_primary: ($) => choice($.application, $._atom),

    // Term primaries:
    // Kept for compatibility with existing highlight queries and node names.
    // Internally, the expression grammar prefers `_atom`.
    term_primary: ($) => $._atom,

    list_literal: ($) =>
      seq(
        field("lbrack", $.lbrack),
        optional(
          seq(
            field("head", $.expr),
            repeat(seq(field("comma", $.comma), field("tail", $.expr))),
            optional(field("trailing_comma", $.comma)),
          ),
        ),
        field("colon", $.colon),
        field("type", $.type_expr),
        field("rbrack", $.rbrack),
      ),

    integer: (_) => token(/[0-9]+/),

    term_identifier: (_) => token(/[a-z][A-Za-z0-9._']*/),

    term_identifier_or_hole: (_) => token(choice("_", /[a-z][A-Za-z0-9._']*/)),

    type_identifier: (_) => token(choice("_", /[A-Z][A-Za-z0-9]*/)),

    // ----------------------------------------------------------------------------
    // Comments
    // ----------------------------------------------------------------------------
    comment: (_) => token(seq("//", /.*/)),

    // ----------------------------------------------------------------------------
    // Explicit punctuation/operator nodes (for highlighting without literal tokens)
    // ----------------------------------------------------------------------------
    lparen: (_) => token("("),
    rparen: (_) => token(")"),
    lbrack: (_) => token("["),
    rbrack: (_) => token("]"),
    comma: (_) => token(","),
    colon: (_) => token(":"),
    equals: (_) => token("="),

    arrow: (_) => token("->"),

    kw_import: (_) => token(prec(2, "import")),
    kw_fun: (_) => token(prec(2, "fun")),
    kw_forall: (_) => token(prec(2, "forall")),
