test/corpus/comments.txt
================================================================================
Line comment before declaration
================================================================================

// This is a comment
x : Int

--------------------------------------------------------------------------------

(source_file
  (newline)
  (comment)
  (newline)
  (declaration
    name: (term_identifier)
    colon: (colon)
    type: (type
      (type_expr
        left: (type_sum_or_primary
          (type_primary
            (type_identifier))))))
  (newline))

================================================================================
Comment in function body
================================================================================

f = fun x : Int,
    // return x
    x

--------------------------------------------------------------------------------

(source_file
  (newline)
  (value_definition
    name: (term_identifier)
    equals: (equals)
    value: (maybe_expr
      (expr
        (fun_expression
          fun: (kw_fun)
          param: (term_identifier_or_hole)
          colon: (colon)
          type: (type_expr
            left: (type_sum_or_primary
              (type_primary
                (type_identifier))))
          comma: (comma)
          (newline)
          (comment)
          (newline)
          body: (expr
            (infix_expression
              left: (application_or_primary
                (term_primary
                  (term_identifier)))))))))
  (newline))

================================================================================
Comment in list literal
================================================================================

xs = [1,
    // second
    2: Int]

--------------------------------------------------------------------------------

(source_file
  (newline)
  (value_definition
    name: (term_identifier)
    equals: (equals)
    value: (maybe_expr
      (expr
        (infix_expression
          left: (application_or_primary
            (term_primary
              (list_literal
                lbrack: (lbrack)
                head: (expr
                  (infix_expression
                    left: (application_or_primary
                      (term_primary
                        (integer)))))
                comma: (comma)
                (newline)
                (comment)
                (newline)
                tail: (expr
                  (infix_expression
                    left: (application_or_primary
                      (term_primary
                        (integer)))))
                colon: (colon)
                type: (type_expr
                  left: (type_sum_or_primary
                    (type_primary
                      (type_identifier))))
                rbrack: (rbrack))))))))
  (newline))

================================================================================
Import statement with comment
================================================================================

// Import the List module
import foo

--------------------------------------------------------------------------------

(source_file
  (newline)
  (comment)
  (newline)
  (import_statement
    keyword: (kw_import)
    module: (term_identifier))
  (newline))

================================================================================
Multiple comments between definitions
================================================================================

x : Int
x = 1

// Comment 1
// Comment 2

y : Int

--------------------------------------------------------------------------------

(source_file
  (newline)
  (declaration
    name: (term_identifier)
    colon: (colon)
    type: (type
      (type_expr
        left: (type_sum_or_primary
          (type_primary
            (type_identifier))))))
  (newline)
  (value_definition
    name: (term_identifier)
    equals: (equals)
    value: (maybe_expr
      (expr
        (infix_expression
          left: (application_or_primary
            (term_primary
              (integer)))))))
  (newline)
  (newline)
  (comment)
  (newline)
  (comment)
  (newline)
  (newline)
  (declaration
    name: (term_identifier)
    colon: (colon)
    type: (type
      (type_expr
        left: (type_sum_or_primary
          (type_primary
            (type_identifier))))))
  (newline))
