test/corpus/declarations.txt
================================================================================
Basic type declaration and value definition
================================================================================

x : Int
x = 42

--------------------------------------------------------------------------------

(source_file
  (newline)
  (declaration
    name: (term_identifier)
    colon: (colon)
    type: (type
      (type_expr
        left: (type_sum_or_primary
          (type_primary
            (type_identifier))))))
  (newline)
  (value_definition
    name: (term_identifier)
    equals: (equals)
    value: (maybe_expr
      (expr
        (infix_expression
          left: (application_or_primary
            (term_primary
              (integer)))))))
  (newline))

================================================================================
Function type declaration
================================================================================

id : Int -> Int

--------------------------------------------------------------------------------

(source_file
  (newline)
  (declaration
    name: (term_identifier)
    colon: (colon)
    type: (type
      (type_expr
        left: (type_sum_or_primary
          (type_primary
            (type_identifier)))
        arrow: (arrow)
        right: (type
          (type_expr
            left: (type_sum_or_primary
              (type_primary
                (type_identifier))))))))
  (newline))

================================================================================
Module identifier
================================================================================

io.bind : String

--------------------------------------------------------------------------------

(source_file
  (newline)
  (declaration
    name: (term_identifier)
    colon: (colon)
    type: (type
      (type_expr
        left: (type_sum_or_primary
          (type_primary
            (type_identifier))))))
  (newline))
