test/corpus/types.txt
================================================================================
Simple type identifier
================================================================================

x : Int

--------------------------------------------------------------------------------

(source_file
  (newline)
  (declaration
    name: (term_identifier)
    colon: (colon)
    type: (type
      (type_expr
        left: (type_sum_or_primary
          (type_primary
            (type_identifier))))))
  (newline))

================================================================================
Function arrow type
================================================================================

f : Int -> Int

--------------------------------------------------------------------------------

(source_file
  (newline)
  (declaration
    name: (term_identifier)
    colon: (colon)
    type: (type
      (type_expr
        left: (type_sum_or_primary
          (type_primary
            (type_identifier)))
        arrow: (arrow)
        right: (type
          (type_expr
            left: (type_sum_or_primary
              (type_primary
                (type_identifier))))))))
  (newline))

================================================================================
Multi-argument function type
================================================================================

add : Int -> Int -> Int

--------------------------------------------------------------------------------

(source_file
  (newline)
  (declaration
    name: (term_identifier)
    colon: (colon)
    type: (type
      (type_expr
        left: (type_sum_or_primary
          (type_primary
            (type_identifier)))
        arrow: (arrow)
        right: (type
          (type_expr
            left: (type_sum_or_primary
              (type_primary
                (type_identifier)))
            arrow: (arrow)
            right: (type
              (type_expr
                left: (type_sum_or_primary
                  (type_primary
                    (type_identifier))))))))))
  (newline))

================================================================================
Quantified type (forall)
================================================================================

id : forall T, T -> T

--------------------------------------------------------------------------------

(source_file
  (newline)
  (declaration
    name: (term_identifier)
    colon: (colon)
    type: (type
      (type_expr
        keyword: (kw_forall)
        tvar: (type_identifier)
        comma: (comma)
        body: (type_expr
          left: (type_sum_or_primary
            (type_primary
              (type_identifier)))
          arrow: (arrow)
          right: (type
            (type_expr
              left: (type_sum_or_primary
                (type_primary
                  (type_identifier)))))))))
  (newline))

================================================================================
Nested quantified type
================================================================================

tru : forall T, T -> T -> T

--------------------------------------------------------------------------------

(source_file
  (newline)
  (declaration
    name: (term_identifier)
    colon: (colon)
    type: (type
      (type_expr
        keyword: (kw_forall)
        tvar: (type_identifier)
        comma: (comma)
        body: (type_expr
          left: (type_sum_or_primary
            (type_primary
              (type_identifier)))
          arrow: (arrow)
          right: (type
            (type_expr
              left: (type_sum_or_primary
                (type_primary
                  (type_identifier)))
              arrow: (arrow)
              right: (type
                (type_expr
                  left: (type_sum_or_primary
                    (type_primary
                      (type_identifier)))))))))))
  (newline))

================================================================================
Type application
================================================================================

xs : List Int

--------------------------------------------------------------------------------

(source_file
  (newline)
  (declaration
    name: (term_identifier)
    colon: (colon)
    type: (type
      (type_expr
        left: (type_sum_or_primary
          (type_primary
            (type_app
              ctor: (type_identifier)
              arg: (type_primary
                (type_identifier))))))))
  (newline))

================================================================================
List brackets type
================================================================================

xs : [Int]

--------------------------------------------------------------------------------

(source_file
  (newline)
  (declaration
    name: (term_identifier)
    colon: (colon)
    type: (type
      (type_expr
        left: (type_sum_or_primary
          (type_primary
            (type_list_brackets
              lbrack: (lbrack)
              type: (type_expr
                left: (type_sum_or_primary
                  (type_primary
                    (type_identifier))))
              rbrack: (rbrack)))))))
  (newline))

================================================================================
Nested list type
================================================================================

xss : [[Int]]

--------------------------------------------------------------------------------

(source_file
  (newline)
  (declaration
    name: (term_identifier)
    colon: (colon)
    type: (type
      (type_expr
        left: (type_sum_or_primary
          (type_primary
            (type_list_brackets
              lbrack: (lbrack)
              type: (type_expr
                left: (type_sum_or_primary
                  (type_primary
                    (type_list_brackets
                      lbrack: (lbrack)
                      type: (type_expr
                        left: (type_sum_or_primary
                          (type_primary
                            (type_identifier))))
                      rbrack: (rbrack)))))
              rbrack: (rbrack)))))))
  (newline))

================================================================================
Product type (tuple)
================================================================================

pair : (Int, Bool)

--------------------------------------------------------------------------------

(source_file
  (newline)
  (declaration
    name: (term_identifier)
    colon: (colon)
    type: (type
      (type_expr
        left: (type_sum_or_primary
          (type_primary
            (type_prod
              lparen: (lparen)
              left: (type_expr
                left: (type_sum_or_primary
                  (type_primary
                    (type_identifier))))
              comma: (comma)
              right: (type_expr
                left: (type_sum_or_primary
                  (type_primary
                    (type_identifier))))
              rparen: (rparen)))))))
  (newline))

================================================================================
Sum type
================================================================================

result : Int + Bool

--------------------------------------------------------------------------------

(source_file
  (newline)
  (declaration
    name: (term_identifier)
    colon: (colon)
    type: (type
      (type_expr
        left: (type_sum_or_primary
          left: (type_primary
            (type_identifier))
          plus: (plus)
          right: (type_primary
            (type_identifier))))))
  (newline))

================================================================================
Complex nested type
================================================================================

parse : [Char] -> (Unit + (Int, [Char]))

--------------------------------------------------------------------------------

(source_file
  (newline)
  (declaration
    name: (term_identifier)
    colon: (colon)
    type: (type
      (type_expr
        left: (type_sum_or_primary
          (type_primary
            (type_list_brackets
              lbrack: (lbrack)
              type: (type_expr
                left: (type_sum_or_primary
                  (type_primary
                    (type_identifier))))
              rbrack: (rbrack))))
        arrow: (arrow)
        right: (type
          (type_expr
            left: (type_sum_or_primary
              (type_primary
                (type_parens
                  lparen: (lparen)
                  type: (type_expr
                    left: (type_sum_or_primary
                      left: (type_primary
                        (type_identifier))
                      plus: (plus)
                      right: (type_primary
                        (type_prod
                          lparen: (lparen)
                          left: (type_expr
                            left: (type_sum_or_primary
                              (type_primary
                                (type_identifier))))
                          comma: (comma)
                          right: (type_expr
                            left: (type_sum_or_primary
                              (type_primary
                                (type_list_brackets
                                  lbrack: (lbrack)
                                  type: (type_expr
                                    left: (type_sum_or_primary
                                      (type_primary
                                        (type_identifier))))
                                  rbrack: (rbrack)))))
                          rparen: (rparen)))))
                  rparen: (rparen)))))))))
  (newline))

================================================================================
Parenthesized function type
================================================================================

higher : (Int -> Int) -> Int

--------------------------------------------------------------------------------

(source_file
  (newline)
  (declaration
    name: (term_identifier)
    colon: (colon)
    type: (type
      (type_expr
        left: (type_sum_or_primary
          (type_primary
            (type_parens
              lparen: (lparen)
              type: (type_expr
                left: (type_sum_or_primary
                  (type_primary
                    (type_identifier)))
                arrow: (arrow)
                right: (type
                  (type_expr
                    left: (type_sum_or_primary
                      (type_primary
                        (type_identifier))))))
              rparen: (rparen))))
        arrow: (arrow)
        right: (type
          (type_expr
            left: (type_sum_or_primary
              (type_primary
                (type_identifier))))))))
  (newline))
